[package]
name = "counter-program"
version = "0.1.0"
description = "Counter program created with Anchor by ferrabled"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
